examples/errors/generality_mismatch.ik
fn xy_same<a, b>(x a, y a, z b) a:
    return x

fn yz_same<a, b>(x a, y b, z b) a:
    return x

fn main():
    let f = xy_same
    f = yz_same
